<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <DigitalClock
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fragment_track_tv_start_study"
        android:id="@+id/tvStudyStateText"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_track_btn_create_zone"
        android:id="@+id/btnCreateNewZone"
        android:onClick="createNewZone"/>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_track_btn_start_study"
            android:id="@+id/btnCurrentZone"
            android:onClick="startCurrentZone"
            android:enabled="true"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_track_btn_stop_study"
            android:id="@+id/btnForceStopStudy"
            android:onClick="forceStopStudy"
            android:enabled="false"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_track_btn_show_last_session"
        android:id="@+id/btnLastSession"
        android:onClick="showLastSession"
        android:enabled="true"/>

    <com.google.android.gms.maps.MapView
        android:layout_marginTop="10dp"
        android:id="@+id/map_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        map:liteMode="true"/>

</LinearLayout>