<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvSessionGeneral"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_session_tv_notifications_blocked"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_session_tv_notifications_that_we_blocked"
            android:id="@+id/tvNotificationsBlocked"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_session_btn_send_notifications"
        android:id="@+id/btnSendAllNotifications"
        android:onClick="sendAllBlockedNotifications"
        android:enabled="true"/>

</LinearLayout>